[package]
name = "Sapozhok"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mhycrypt = { path = "../RustySamovar/mhycrypt" }
dispatch_proto = { path = "dispatch_proto" }
base64 = "0.13.0"
futures = "0.3"
actix-web = { version = "3", features = ["openssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
pretty_env_logger = "0.4"
prost = "0.8"
hostname = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
version-compare = "0.1"
rust-ini = "0.18"

[target.'cfg(windows)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(unix)'.dependencies]
openssl = "0.10"