[package]
name = "dispatch_proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.8"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
prost-build = { version = "0.8" }
